// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test users query should find a user by id 1`] = `
Object {
  "data": Object {
    "findUser": Array [
      Object {
        "handle": "user1",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should not find a user by id and throw an error 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Couldn't find a user with id 'abc'],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test users query should query the all the users 1`] = `
Object {
  "data": Object {
    "listCreators": Array [
      Object {
        "handle": "user2",
      },
      Object {
        "handle": "user1",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
